--- a/k8s/operator/templates/deployment.yaml
+++ b/k8s/operator/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       labels:
         {{- include "sdp-operator.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.sdp.appgateOperator.image.pullSecrets }}
+      {{- with .Values.sdp.sdpOperator.image.pullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
@@ -35,60 +35,60 @@ spec:
             - name: APPGATE_OPERATOR_USER
               valueFrom:
                 secretKeyRef:
-                  name: {{ default (include "sdp-operator.secret" .) .Values.sdp.appgateOperator.secret }}
+                  name: {{ default (include "sdp-operator.secret" .) .Values.sdp.sdpOperator.secret }}
                   key: appgate-operator-user
             - name: APPGATE_OPERATOR_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ default (include "sdp-operator.secret" .) .Values.sdp.appgateOperator.secret }}
+                  name: {{ default (include "sdp-operator.secret" .) .Values.sdp.sdpOperator.secret }}
                   key: appgate-operator-password
             - name: APPGATE_OPERATOR_HOST
-              value: {{ required "A valid .Values.sdp.appgateOperator.host entry is required!" .Values.sdp.appgateOperator.host }}
+              value: {{ required "A valid .Values.sdp.sdpOperator.host entry is required!" .Values.sdp.sdpOperator.host }}
             - name: APPGATE_OPERATOR_DEVICE_ID
-              value: {{ required "A valid .Values.sdp.appgateOperator.deviceId entry is required!" .Values.sdp.appgateOperator.deviceId }}
+              value: {{ required "A valid .Values.sdp.sdpOperator.deviceId entry is required!" .Values.sdp.sdpOperator.deviceId }}
             - name: APPGATE_OPERATOR_LOG_LEVEL
-              value: "{{ .Values.sdp.appgateOperator.logLevel }}"
+              value: "{{ .Values.sdp.sdpOperator.logLevel }}"
             - name: APPGATE_OPERATOR_SPEC_DIRECTORY
-              value: /root/api_specs/{{ required "A valid .Values.sdp.appgateOperator.version entry is required!" .Values.sdp.appgateOperator.version }}
+              value: /root/api_specs/{{ required "A valid .Values.sdp.sdpOperator.version entry is required!" .Values.sdp.sdpOperator.version }}
             - name: APPGATE_OPERATOR_TIMEOUT
-              value: "{{ .Values.sdp.appgateOperator.timeout }}"
-            {{- with .Values.sdp.appgateOperator.targetTags }}
+              value: "{{ .Values.sdp.sdpOperator.timeout }}"
+            {{- with .Values.sdp.sdpOperator.targetTags }}
             - name: APPGATE_OPERATOR_TARGET_TAGS
               value: "{{ join "," . }}"
             {{- end }}
-            {{- with .Values.sdp.appgateOperator.excludeTags }}
+            {{- with .Values.sdp.sdpOperator.excludeTags }}
             - name: APPGATE_OPERATOR_EXCLUDE_TAGS
               value: "{{ join "," . }}"
             {{- end }}
-            {{- with .Values.sdp.appgateOperator.builtinTags }}
+            {{- with .Values.sdp.sdpOperator.builtinTags }}
             - name: APPGATE_OPERATOR_BUILTIN_TAGS
               value: "{{ join "," . }}"
             {{- end }}
             - name: APPGATE_OPERATOR_DRY_RUN
-              value: "{{ .Values.sdp.appgateOperator.dryRun }}"
+              value: "{{ .Values.sdp.sdpOperator.dryRun }}"
             - name: APPGATE_OPERATOR_CLEANUP
-              value: "{{ .Values.sdp.appgateOperator.cleanup }}"
+              value: "{{ .Values.sdp.sdpOperator.cleanup }}"
             - name: APPGATE_OPERATOR_TWO_WAY_SYNC
-              value: "{{ .Values.sdp.appgateOperator.twoWaySync }}"
+              value: "{{ .Values.sdp.sdpOperator.twoWaySync }}"
             - name: APPGATE_OPERATOR_SSL_NO_VERIFY
-              value: "{{ .Values.sdp.appgateOperator.sslNoVerify }}"
+              value: "{{ .Values.sdp.sdpOperator.sslNoVerify }}"
             - name: APPGATE_OPERATOR_CONFIG_MAP
-              value: {{ default (include "sdp-operator.config-mt" .) .Values.sdp.appgateOperator.configMapMt }}
-            {{- with .Values.sdp.appgateOperator.caCert }}
+              value: {{ default (include "sdp-operator.config-mt" .) .Values.sdp.sdpOperator.configMapMt }}
+            {{- with .Values.sdp.sdpOperator.caCert }}
             - name: APPGATE_OPERATOR_CACERT
               value: "{{ . }}"
             {{- end }}
-            {{- with .Values.sdp.appgateOperator.fernetKey }}
+            {{- with .Values.sdp.sdpOperator.fernetKey }}
             - name: APPGATE_OPERATOR_FERNET_KEY
               value: "{{ . }}"
             {{- end }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.sdp.appgateOperator.image.repository }}/sdp-operator:{{ default .Chart.AppVersion .Values.sdp.appgateOperator.image.tag}}"
-          imagePullPolicy: {{ .Values.sdp.appgateOperator.image.pullPolicy }}
+          image: "{{ .Values.sdp.sdpOperator.image.repository }}/sdp-operator:{{ default .Chart.AppVersion .Values.sdp.sdpOperator.image.tag}}"
+          imagePullPolicy: {{ .Values.sdp.sdpOperator.image.pullPolicy }}
           args:
             - appgate-operator
-            {{- if eq .Values.sdp.appgateOperator.reverseMode true }}
+            {{- if eq .Values.sdp.sdpOperator.reverseMode true }}
             - --reverse-mode
             {{- end }}
           resources:
