Mount volume with the deployment key

--- a/k8s/operator/templates/deployment.yaml
+++ b/k8s/operator/templates/deployment.yaml
@@ -27,8 +27,16 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       serviceAccountName: {{ include "sdp-operator.serviceAccountName" . }}-sdp
+      volumes:
+        - name: git-operator-deployment-key
+          items:
+            - key: github-deployment-key
+              path: deployment.key
       containers:
         - name: {{ .Chart.Name }}-sdp
+          volumeMounts:
+            - mountPath: /opt/git-operator/k8s
+              name: git-operator-deployment-key
           env:
             - name: APPGATE_OPERATOR_NAMESPACE
               value: {{ .Release.Namespace }}
