--- a/k8s/operator/templates/configmap-mt-operator.yaml
+++ b/k8s/operator/templates/configmap-mt-operator.yaml
@@ -1,5 +1,5 @@
 {{- if not .Values.sdp.sdpOperator.configMapMt }}
-{{- if has "appgate-operator" .Values.sdp.operators }}
+{{- if has "sdp-operator" .Values.sdp.operators }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
