--- a/k8s/operator/templates/serviceaccount.yaml
+++ b/k8s/operator/templates/serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{- if has "appgate-operator" .Values.sdp.operators }}
+{{- if has "sdp-operator" .Values.sdp.operators }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
