--- a/k8s/operator/values.yaml
+++ b/k8s/operator/values.yaml
@@ -96,6 +96,8 @@ sdp:
     externalSecretSource:
       vault:
         address: ""
+        inCluster: false
+        tokenSecret: ""
       generic:
         address: ""
 
